@@ -1,13 +1,23 @@
 # HothProject
 Agile software project management:
 
+How To run: 
+Download the Project and open it in Intellji.
+We have JavaFX in files in side the project so you only need to fix Application options for the CLass Controller.Learno. 
+We need to add a VM option: --module-path (insert personal Path to the Fx Lib) --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+Example:--module-path C:\Users\ORanh\OneDrive\Desktop\javafx-sdk-19\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+
+Then you should be able to run the program.
 
 
-
+These Are the links to everthing that we have used during the corse:
 MOCKUP FIGMA DESIGN:
 https://www.figma.com/file/EzX2V2YRR4EY0gK3YTSd4g/Agil-projekt?node-id=0%3A1
 
 
 This is a link to our Scrum Board:
 https://trello.com/b/8BXllQqL/dit257-agile-software-project-management
+
+Google Drive:
+https://drive.google.com/drive/folders/17ffJZmpHzQaJSibBl4RMj2cybAH23p_t?usp=sharing
 
